Introduces IDM-as-RS configuration

--- a/config/amster/Dockerfile
+++ b/config/amster/Dockerfile
@@ -1,3 +1,3 @@
-FROM gcr.io/forgerock-io/amster/qa-smoke:latest
+FROM gcr.io/forgerock-io/amster/docker-build:7.0.0-dd200ce14c
 
 COPY  --chown=forgerock . /opt/amster
