--- a/config/idm/conf/config.properties
+++ b/config/idm/conf/config.properties
@@ -73,6 +73,10 @@ felix.startlevel.bundle=10
 # by default, uncomment the following line to disable it.
 #felix.shutdown.hook=false
 
+# The name of the PersistenceManager to be used by the framework
+# when persisting component configurations.
+felix.cm.pm=repo
+
 #
 # Bundle config properties.
 #
