--- a/config/helm-common.yaml
+++ b/config/helm-common.yaml
@@ -1,7 +1,7 @@
 # Warning: With file based config, domain and fqdn are embedded in the configuration
 # Changing this top level variable will not change the config
 # TODO: Investigate how we update domain, etc. in FBC
-domain: example.com
+domain: forgeops.com
 
 # Used by the idm helm chart - sets the boot.properties to point at the ds ridepo.
 openidm:
@@ -11,6 +11,6 @@ openidm:
     user: "uid=admin"
     password: password
 
-# We can use this to control whether products attempt to write config changes 
+# We can use this to control whether products attempt to write config changes
 # back out to the file system. Only used by idm right now...
 immutableConfig: true
