--- a/helm/amster/values.yaml
+++ b/helm/amster/values.yaml
@@ -17,7 +17,7 @@ subdomain: iam
 # If these are not set (example: helm install --set amadminPassword=foo amster) a random password
 # will be generated. The password can viewed using:
 # kubectl get configmaps amster-config -o yaml
-# You may wish to delete this configmap once you have saved the passwords. 
+# You may wish to delete this configmap once you have saved the passwords.
 # amadminPassword: password
 # encryptionKey: "123456789012"
 # policyAgentPassword: Passw0rd
@@ -37,7 +37,7 @@ configStore:
   # This is the first StatefulSet name of the configstore:
   host: configstore-0.configstore
   port: 1389
-  #dirManager: "cn=Directory Manager"
+  #dirManager: "uid=admin"
   dirManager: "uid=am-config,ou=admins,ou=am-config"
   adminPort: 4444
   password: password
@@ -48,7 +48,7 @@ userStore:
   suffix: "ou=identities"
   host: userstore-0.userstore
   port: 1389
-  dirManager: "cn=Directory manager"
+  dirManager: "uid=admin"
   password: "password"
   storeType: "LDAPv3ForOpenDS"
 
@@ -80,10 +80,10 @@ resources:
 
 istio:
   enabled: false
- 
+
 
 # Amster scripts
-# 
+#
 # You can set your own amster scripts here. They will be run in alphabetical order when the Amster pod detects an unconfigured AM.
 # You can list amster commands or invoke other scripts - it is good practice to keep your Amster scripts in version control:
 # e.g.:
