--- a/config/idm/Dockerfile
+++ b/config/idm/Dockerfile
@@ -1,4 +1,4 @@
-FROM forgerock-docker-public.bintray.io/forgerock/idm:7.0.0-2447bc6
+FROM gcr.io/forgerock-io/idm/docker-build:7.0.0-4fcaada
 
 # Removes any existing conf files that might conflict with our config. This includes the embedded ds repo.
 RUN rm -fr /opt/openidm/conf
