FRAAS-183: Reuse CDM artifacts as part of the FRaaS deployments
Add ServiceAccountName directive to AM - IDM - DS charts.

--- a/helm/ds/templates/ds.yaml
+++ b/helm/ds/templates/ds.yaml
@@ -41,6 +41,9 @@ spec:
         release: {{ .Release.Name }}
         component: {{ .Values.component }}
     spec:
+      {{- with .Values.serviceAccountName }}
+      serviceAccountName: {{ . }}
+      {{- end }}
       affinity:
         podAntiAffinity:
         {{- if eq .Values.podAntiAffinity "hard" }}
