--- a/helm/openam/templates/openam-deployment.yaml
+++ b/helm/openam/templates/openam-deployment.yaml
@@ -16,6 +16,9 @@ spec:
       annotations:
         sidecar.istio.io/inject: "{{ .Values.istio.enabled }}"
     spec:
+      {{- with .Values.serviceAccountName }}
+      serviceAccountName: {{ . }}
+      {{- end }}
       terminationGracePeriodSeconds: 10
       {{- if eq .Values.podAntiAffinity "hard" }}
       affinity:
